--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
     <script src="https://unpkg.com/htmx.org@1.9.11" integrity="sha384-0gxUXCCR8yv9FM2b+U3FDbsKthCI66oH5IA9fHppQq9DDMHuMauqq1ZHBpJxQ0J0" crossorigin="anonymous"></script>
   </head>
   <body>
-    <button hx-post="/clicked"
-      hx-trigger="click"
-      hx-target="#parent-div"
-      hx-swap="outerHTML"
-    >
-        Click Me!
-    </button>
+    <div>
+      <button hx-post="https://95jmjq8t65.execute-api.eu-west-1.amazonaws.com/dev/" hx-target="this">
+         Click me!
+      </button>
+  </div>
   </body>
 </html>
