--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <html>
   <head>
     <title>HTMX API Gateway Lambda</title>
-    <script src="https://unpkg.com/htmx.org@1.9.11" integrity="sha384-0gxUXCCR8yv9FM2b+U3FDbsKthCI66oH5IA9fHppQq9DDMHuMauqq1ZHBpJxQ0J0" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/htmx.org@1.9.11"></script>
   </head>
   <body>
     <div>
-      <button hx-post="https://95jmjq8t65.execute-api.eu-west-1.amazonaws.com/dev/" hx-target="this">
-         Click me!
+      <div id="message">// message</div>
+      <button hx-get="https://95jmjq8t65.execute-api.eu-west-1.amazonaws.com/dev" hx-target="#message">
+        Click me!
       </button>
-  </div>
+    </div>
   </body>
 </html>
